--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.5 <4.0.0'
+  sdk: '>=3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,7 +34,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.4
+  bloc: ^8.0.0
+  flutter_bloc: ^8.0.0
+  google_fonts: ^5.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +63,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets\icons\visibility.svg
+    - assets\icons\delete.svg
+    - assets\icons\check.svg
+    - assets\icons\info_outline.svg
+    - assets\icons\add.svg
+    - assets\icons\visibility_off.svg
+    - assets\icons\double_excl.svg
+    - assets\icons\down_arrow.svg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
