--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   flutter_bloc: ^8.0.0
   google_fonts: ^5.0.0
   intl: ^0.18.1
+  dio: ^5.2.1+1
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.0.15
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,7 +71,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets\icons\
+    - assets\icons\visibility.svg
+    - assets\icons\delete.svg
+    - assets\icons\check.svg
+    - assets\icons\info_outline.svg
+    - assets\icons\add.svg
+    - assets\icons\visibility_off.svg
+    - assets\icons\double_excl.svg
+    - assets\icons\down_arrow.svg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
