--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.0
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.1
 
 
 dev_dependencies:
@@ -48,6 +50,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   isar_generator: ^3.1.0+1
   build_runner: ^2.4.5
+  freezed: ^2.3.5
+  json_serializable: ^6.7.1
 
 
 flutter:
