--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.18.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
+  shared_preferences: ^2.2.0
 
 
 dev_dependencies:
