--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
   shared_preferences: ^2.2.0
+  get_it: ^7.6.0
 
 
 dev_dependencies:
