--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   get_it: ^7.6.0
 
   mockito: ^5.4.2
+  firebase_core: ^2.15.0
+  firebase_analytics: ^10.4.4
+  firebase_remote_config: ^4.2.4
+  firebase_crashlytics: ^3.3.4
 
 
 dev_dependencies:
