--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,4 +24,4 @@ jobs:
               run: flutter test
               
             - name: Build
-              run: flutter build apk
+              run: flutter build apk -t lib/main_prod.dart  
