--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,11 +70,11 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets\icons\visibility.svg
-    - assets\icons\delete.svg
-    - assets\icons\check.svg
-    - assets\icons\info_outline.svg
-    - assets\icons\add.svg
-    - assets\icons\visibility_off.svg
-    - assets\icons\double_excl.svg
-    - assets\icons\down_arrow.svg
+    - assets/icons/visibility.svg
+    - assets/icons/delete.svg
+    - assets/icons/check.svg
+    - assets/icons/info_outline.svg
+    - assets/icons/add.svg
+    - assets/icons/visibility_off.svg
+    - assets/icons/double_excl.svg
+    - assets/icons/down_arrow.svg
