--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,7 @@ jobs:
             - uses: subosito/flutter-action@v2
               with:
                 channel: 'stable'
+                flutter-version: "3.3.6"
 
             - name: Getting dependencies
               run: flutter pub get
