--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,8 +20,11 @@ jobs:
             - name: Analyzing
               run: flutter analyze --no-fatal-infos
 
-            - name: Testing
-              run: flutter test
+            - name: Testing local unit
+              run: flutter test test/unit_tests/local_unit_test.dart
+
+            - name: Testing task repository impl
+              run: flutter test test/unit_tests/task_repository_impl_test.dart
               
             - name: Build
               run: flutter build apk -t lib/main_prod.dart  
